fix(page): text-align: start

--- a/site/src/main/.vuepress/styles/index.scss
+++ b/site/src/main/.vuepress/styles/index.scss
@@ -30,6 +30,10 @@
   word-break: break-word !important;
 }
 
+.theme-hope-content:not(.custom)>p, .theme-hope-content:not(.custom)>ul p, .theme-hope-content:not(.custom)>ol p {
+  text-align: start !important;
+}
+
 // #app {
 //   --code-bg-color: #282c34;
 //   --code-color: #fff;
